# AC-DIAMOND

./: .gitignore  CMakeLists.txt  README.rst
.github/workflows/: ci.yaml
scripts/: cmp-aln.py  cmp-query.py  sensitive1_search.sh  unaligned.py
src/: Makefile  install-boost  main.cpp
src/align/: align_queries.h  align_read.h  align_sequence.h  link_segments.h
src/basic/: const.h  match.h  options.cpp  options.h  reduction.h  score_matrix.h  sequence.h  setup.h  statistics.h  value.h
src/data/: load_seqs.h  queries.h  reference.h  sequence_set.h
src/dp/: dp_matrix2.h  floating_sw2.h  score_profile2.h  score_vector2.h  traceback.h
src/output/: daa_write.h  output_buffer.h  output_format.h
src/run/: make_db.h  master_thread.h
src/search/: align.h  align_ungapped.h  sse_dist.h  trace_pt_buffer.h
src/util/: async_buffer.h  complexity_filter.h  seq_file_format.h  system.h  temp_file.h  util.h
